--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -132,13 +132,13 @@ if is_unit_test:
 else:
 	data_files=[('@prefix@/share/ctools/swig', install_files)]
 
-# Optionally add OpenMP support
+# Optionally enable OpenMP
 if '@OPENMP_TRUE@' != '#':
-	extra_compile_args=['-fopenmp']
-	extra_link_args=['-fopenmp']
+	extra_compile_args = ['-fopenmp']
+	extra_link_args    = ['-fopenmp']
 else:
-	extra_compile_args=[]
-	extra_link_args=[]
+	extra_compile_args = []
+	extra_link_args    = []
 
 # Setup
 setup(name='@PACKAGE_NAME@',
@@ -153,8 +153,8 @@ setup(name='@PACKAGE_NAME@',
                              library_dirs=library_dirs,
                              libraries=libraries,
                              runtime_library_dirs=runtime_library_dirs,
-			     extra_compile_args=extra_compile_args,
-			     extra_link_args=extra_link_args)],
+                             extra_compile_args=extra_compile_args,
+                             extra_link_args=extra_link_args)],
 	  data_files=data_files,
 	  license="GNU GPL v3",
 	  long_description="CTA science analysis tools",
