--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -1,7 +1,7 @@
 #############################################################################
 # Disutils setup file for ctools Python extension module                    #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2011 Jurgen Knodlseder                                      #
+# Copyright (C) 2011-2012 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -134,8 +134,8 @@ else:
 
 # Optionally enable OpenMP
 if '@OPENMP_TRUE@' != '#':
-	extra_compile_args = ['-fopenmp']
-	extra_link_args    = ['-fopenmp']
+	extra_compile_args = ['@OPENMP_CXXFLAGS@']
+	extra_link_args    = ['@OPENMP_CXXFLAGS@']
 else:
 	extra_compile_args = []
 	extra_link_args    = []
