--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -29,7 +29,7 @@ import sys
 is_unit_test = False
 if (len(sys.argv) >= 3):
 	if (sys.argv[2] == '--inplace'):
-		print "This build is for unit testing."
+		print@PYTHON_OPEN@"This build is for unit testing."@PYTHON_CLOSE@
 		is_unit_test = True
 
 # Darwin MacPorts kluge: Remove -L/opt/local/lib path from LDSHARED as this
@@ -50,7 +50,7 @@ if sys.platform.lower().startswith("darwin"):
 		else:
 			ldshared_rm += option + ' '
 	if (len(ldshared_rm) > 0):
-		print 'Removed following option(s) from LDSHARED: '+ldshared_rm
+		print@PYTHON_OPEN@"Removed following option(s) from LDSHARED: "+ldshared_rm@PYTHON_CLOSE@
 	
 	# Set LDSHARED
 	cvars['LDSHARED'] = ldshared_new
@@ -68,7 +68,7 @@ if sys.platform.lower().startswith("darwin") and is_unit_test:
 	# an already existing link.
 	try:
 		os.remove('../src/.libs/libctools_python.a')
-		print 'Removed ../src/.libs/libctools_python.a'
+		print@PYTHON_OPEN@"Removed ../src/.libs/libctools_python.a"@PYTHON_CLOSE@
 	except:
 		pass
 	
@@ -76,10 +76,10 @@ if sys.platform.lower().startswith("darwin") and is_unit_test:
 	# symbolic link
 	try:
 		os.symlink('libctools.a', '../src/.libs/libctools_python.a')
-		print 'Created ../src/.libs/libctools_python.a'
+		print@PYTHON_OPEN@"Created ../src/.libs/libctools_python.a"@PYTHON_CLOSE@
 		libcta='ctools_python'
 	except:
-		print 'WARNING: Failed to create symbolic link to static library. Link dynamically.'
+		print@PYTHON_OPEN@"WARNING: Failed to create symbolic link to static library. Link dynamically."@PYTHON_CLOSE@
 
 # Set default include directories and data files
 include_dirs         = ['@prefix@/include/gammalib']
